# MindMigo-ai-studdy-buddy

./: .gitignore  README.md  SETUP_GUIDE.md  START_ALL.bat  app.py  initialize_gamification_data.py  main.py  pyproject.toml  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh
frontend/: README.md  chat.html  gamification-complete.html  gamification.html  index.html
frontend/css/: chat.css  gamification.css  notifications.css  progress.css  quiz-results.css  styles.css
frontend/js/: api.js  chat.js  chatEmbed.js  config.js  dailyProblem.js  diagnostics.js  gamification.js  knowledgeGraph.js  main.js  notifications.js  progress.js  quiz.js  utils.js
results/: quiz_results_20251006_112958.csv
src/common/: custom_exception.py  logger.py
src/config/: gamification_config.py  settings.py
src/database/: __init__.py  database.py  migrate_gamification.py  models.py  test_schema.py
src/generator/: question_generator.py
src/llm/: groq_client.py
src/models/: api_schemas.py  gamification_schemas.py  progress_schemas.py  question_schemas.py
src/prompts/: templates.py
src/services/: chat_service.py  daily_problem_service.py  feedback_service.py  gamification_service.py  knowledge_graph_service.py  progress_service.py  quiz_service.py  test_ai_feedback.py  test_analytics_api.py  test_progress_api.py  test_progress_dashboard.py  test_quiz_integration.py
src/utils/: content_generator.py  generate_knowledge_graph.py  helpers.py
